--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -246,6 +246,10 @@
 
   "defeat_string" : "Жеңилүү",
   "no_more_pokemons_string" : "Машыктыруучу сиздин бардык покемонуңуз жеңилип калды. Сураныч калыбына келтирип, дагы бир жолу аракет кылыңыз",
-  "no_more_pokeballs" : "Тандаңыз башка покеболл же дүкөндөн дагы сатып алыңыз"
-
+  "no_more_pokeballs" : "Тандаңыз башка покеболл же дүкөндөн дагы сатып алыңыз",
+  "view_creator_github" : "Github Жаратуучуну ачуу",
+  "view_creator_linkedin" : "Linkedin Жаратуучуну ачуу",
+  "win_string" : "Жеңиш",
+  "challenge_overcome_string" : "Сиз бул сынакта ийгиликтүү жеңдиңиз",
+  "you_got_string" : "Сиз кабыл алдыңыз"
 }
